<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.mephisto.vpin</groupId>
    <artifactId>studio</artifactId>
    <version>5.0.0</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <docs.directory>${project.basedir}/documentation</docs.directory>
        <javafx.version>25.0.3</javafx.version>
        <sqlite.version>3.53.0.0</sqlite.version>
        <commons-io.version>2.22.0</commons-io.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <commons-codec.version>1.22.0</commons-codec.version>
        <httpclient5.version>5.6.1</httpclient5.version>
        <httpcore5.version>5.4.2</httpcore5.version> <!-- Added httpcore5 version -->
        <spotbugs.version>4.9.8</spotbugs.version>
        <launch4j.version>2.7.0</launch4j.version>
        <jackson.version>3.1.1</jackson.version>
        <spring.boot.version>4.0.6</spring.boot.version>
        <logback.version>1.5.32</logback.version>
        <slf4j.version>2.0.17</slf4j.version>
        <jspecify.version>1.0.0</jspecify.version>
    </properties>

    <scm>
        <connection>git@github.com:syd711/vpin-studio.git</connection>
        <developerConnection>git@github.com:syd711/vpin-studio.git</developerConnection>
    </scm>

    <modules>
        <!-- Keep this module order: the UI module will package everything, so keep it at the end  -->
        <module>vpin-connector-assets</module>
        <module>vpin-connector-discord</module>
        <module>vpin-connector-github</module>
        <module>vpin-connector-iscored</module>
        <module>vpin-connector-vps</module>
        <module>vpin-connector-wovp</module>
        <module>vpin-studio-commons</module>
        <module>vpin-studio-app</module>
        <module>vpin-studio-server</module>
        <module>vpin-studio-rest-client</module>
        <module>vpin-studio-ui</module>
        <module>vpin-tools</module>
        <module>vps-bot</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>tools.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents.client5</groupId>
                <artifactId>httpclient5</artifactId>
                <version>${httpclient5.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents.core5</groupId>
                <artifactId>httpcore5</artifactId>
                <version>${httpcore5.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jspecify</groupId>
                <artifactId>jspecify</artifactId>
                <version>${jspecify.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                    <configuration>
                        <argLine>
                            --add-exports javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED
                            --add-exports javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>4.5</version>
                    <executions>
                        <execution>
                            <id>download-licenses</id>
                            <goals>
                                <goal>download-licenses</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <cleanLicensesOutputDirectory>true</cleanLicensesOutputDirectory>
                        <errorRemedy>ignore</errorRemedy>
                        <excludeTransitiveDependencies>true</excludeTransitiveDependencies>
                        <includeTransitiveDependencies>false</includeTransitiveDependencies>
                        <licensesOutputFile>${docs.directory}/third-party-licenses/licenses.xml</licensesOutputFile>
                        <licensesOutputDirectory>${docs.directory}/third-party-licenses</licensesOutputDirectory>
                        <outputDirectory>${docs.directory}</outputDirectory>
                        <sortByGroupIdAndArtifactId>true</sortByGroupIdAndArtifactId>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openrewrite.maven</groupId>
                    <artifactId>rewrite-maven-plugin</artifactId>
                    <version>6.38.0</version>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <repositories>
        <repository>
            <id>gitlab-maven</id>
            <url>https://gitlab.com/api/v4/projects/59936705/packages/maven</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>gitlab-maven</id>
            <url>https://gitlab.com/api/v4/projects/59936705/packages/maven</url>
        </repository>

        <snapshotRepository>
            <id>gitlab-maven</id>
            <url>https://gitlab.com/api/v4/projects/59936705/packages/maven</url>
        </snapshotRepository>
    </distributionManagement>

</project>
